--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-# Database Config
-# Un-comment these lines to connect to a database. When commented out, you automatically get an in-memory-database.
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url: ${JDBC_DATABASE_URL:}
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
 
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
+spring.thymeleaf.mode=HTML
+
+logging.level.org.springframework=INFO
+
+spring.profiles.active=production
+
+server.port=${PORT:5000}
