--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 
     <dependencies>
         <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-autoconfigure</artifactId>
+    <version>2.0.3.RELEASE</version>
+</dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
